[metadata]
name = tobii_g3
version = 0.0.1
author = Jeffrey Weiss
author_email = jeff.weiss@pitt.edu
description = Python implementation of the Tobii Pro Glasses 3 API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pitt-rnel/tobii_g3_python
project_urls =
    Bug Tracker = https://github.com/pitt-rnel/tobii_g3_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
#package_dir =
#    = tobii_g3
packages = find:
python_requires = >=3.6
install_requires = 
    websocket-client
    requests

#[options.packages.find]
#where = tobii_g3